--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "": "src/",
+            "MessageBirdClient\\": "src/",
             "MessageBirdClient\\Component\\": "src/"
         },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
