--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+	    "phpunit/phpunit": "^6.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -55,12 +56,6 @@
         "post-update-cmd": [
             "@symfony-scripts"
         ]
-    },
-    "config": {
-        "platform": {
-            "php": "5.5.9"
-        },
-        "sort-packages": true
     },
     "extra": {
         "symfony-app-dir": "app",
