--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
+        "symfony/cache": "^3.2",
         "twig/twig": "^1.0||^2.0",
 	    "phpunit/phpunit": "^6.1"
     },
