--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "symfony/symfony": "3.2.*",
         "symfony/cache": "^3.2",
         "twig/twig": "^1.0||^2.0",
-	    "phpunit/phpunit": "^6.1"
+	    "phpunit/phpunit": "^6.1",
+        "hostnet/phpcs-tool": "^5.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
